--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -46,12 +46,13 @@
 
     &--number {
       margin: 0;
-      padding-right: 0.2rem;
+      padding-right: 0.5rem;
       font-weight: bold;
+      font-size: 20px;
     }
 
     &--icon {
-
+      padding-top: 0.2rem;
     }
   }
 
